fix: overflow bug

--- a/packages/umi-plugin-ui/src/plugins/dashboard/ui/index.module.less
+++ b/packages/umi-plugin-ui/src/plugins/dashboard/ui/index.module.less
@@ -3,7 +3,8 @@
 .container {
   padding: 20px;
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   &-row {
     margin-left: -8px;
     margin-right: -8px;
